kubernetes/local/1-PeerPrep-Frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: asdfghjklxd/peerprep-frontend:latest
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 5173
        resources:
---

kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 5173
      targetPort: 5173
