kubernetes/local/2-PeerPrep-User-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - image: asdfghjklxd/peerprep-user-service:latest
        imagePullPolicy: Always
        name: user-service
        ports:
        - containerPort: 8001
        resources:
---

kind: Service
apiVersion: v1
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: user-service
      protocol: TCP
      port: 8001
      targetPort: 8001
