kubernetes/local/4-PeerPrep-Matching-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matching-service
  name: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
      - image: asdfghjklxd/peerprep-matching-service:latest
        imagePullPolicy: Always
        name: matching-service
        ports:
        - containerPort: 8002
        resources:
---

kind: Service
apiVersion: v1
metadata:
  name: matching-service
spec:
  selector:
    app: matching-service
  ports:
    - name: matching-service
      protocol: TCP
      port: 8002
      targetPort: 8002
