kubernetes/local/5-PeerPrep-Collaboration-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: collaboration-service
  name: collaboration-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collaboration-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: collaboration-service
    spec:
      containers:
      - image: asdfghjklxd/peerprep-collaboration-service:latest
        imagePullPolicy: Always
        name: collaboration-service
        ports:
          - containerPort: 8004
        resources:
---

kind: Service
apiVersion: v1
metadata:
  name: collaboration-service
spec:
  selector:
    app: collaboration-service
  ports:
    - name: collaboration-service
      protocol: TCP
      port: 8004
      targetPort: 8004
