kubernetes/local/7-PeerPrep-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: peerprep-ingress
  name: peerprep-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 5173

      - pathType: Prefix
        path: "/api/user-service"
        backend:
          service:
            name: user-service
            port: 
              number: 8001

      - pathType: Prefix
        path: "/api/matching-service"
        backend:
          service:
            name: matching-service
            port: 
              number: 8002

      - pathType: Prefix
        path: "/api/question-service"
        backend:
          service:
            name: question-service
            port: 
              number: 8003

      - pathType: Prefix
        path: "/api/collaboration-service"
        backend:
          service:
            name: collaboration-service
            port: 
              number: 8004
      
      - pathType: Prefix
        path: "/api/communication-service"
        backend:
          service:
            name: communication-service
            port:
              number: 8005
